# hhh-bo-gateway

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: auto-status.yml  ci.yml  issue-closed.yml  notify-main.yml  pr-title.yml  secret-scan.yml
src/: main.py
src/infrastructure/config/: dependencies.py  settings.py
tests/: conftest.py
tests/unit/: test_dependencies.py  test_main.py  test_settings.py
