[project]
name = "hhh-bo-gateway"
version = "0.1.0"
description = "H³ - Backoffice telemetry aggregation gateway (hexagonal, FastAPI, MongoDB)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "opyoid>=0.7.0,<4.0",
    "motor>=3.6,<4",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "hexadian-auth-common[fastapi]>=2.0.0,<3",
    "httpx>=0.28.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]


# Credentials supplied via UV_INDEX_HEXADIAN_USERNAME / UV_INDEX_HEXADIAN_PASSWORD env vars
[[tool.uv.index]]
name = "hexadian"
url = "http://z12trh7jzskrmq7blkanpj05.212.227.227.33.sslip.io/hexadian/stable/+simple/"
explicit = true

[tool.uv.sources]
hexadian-auth-common = { index = "hexadian" }